[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Witch/witches.tres" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 22.5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.54902, 0.54902, 0.54902, 1 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 234, -47 )
z_index = 1
script = ExtResource( 2 )
Speed = 0
IsAttacking = false
witch_index = 2

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 4.5 )
shape = SubResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -45.0
margin_top = -51.0
margin_right = 45.0
margin_bottom = -37.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 24.0
value = 24.0
percent_visible = false

[node name="HealthValue" type="Label" parent="."]
margin_left = -61.0
margin_top = -51.0
margin_right = -21.0
margin_bottom = -37.0
text = "50"

[node name="Stun" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true
